@@ -143,9 +143,6 @@ static Spec current_spec;             /* Holds a Spec as it is built */
 %token TOK_MATCHPOS TOK_STRING_VAL TOK_NUMERIC_VAL TOK_YES TOK_NO
 %token TOK_BEGIN TOK_END TOK_UNRECOGNIZED TOK_EQUALS
 
-/* deprecated in 1.0.16 */
-%token TOK_B_NODES TOK_E_NODES TOK_B_GLOBAL TOK_E_GLOBAL TOK_OLD_PORT
-
 %%
 /* Grammar Rules for the powerman.conf config file */
 
@@ -163,17 +160,6 @@ config_item     : client_port
                 | device
                 | node
                 | alias
-                | deprecated
-;
-deprecated      : TOK_B_NODES   { 
-    _warnmsg("'begin nodes' no longer needed"); 
-}               | TOK_E_NODES   { 
-    _warnmsg("'end nodes' no longer needed"); 
-}               | TOK_B_GLOBAL  { 
-    _warnmsg("'begin global' no longer needed"); 
-}               | TOK_E_GLOBAL  { 
-    _warnmsg("'end global' no longer needed"); 
-} 
 ;
 TCP_wrappers    : TOK_TCP_WRAPPERS         { 
     _warnmsg("'tcpwrappers' without yes|no"); 
@@ -185,9 +171,6 @@ TCP_wrappers    : TOK_TCP_WRAPPERS         {
 }
 ;
 client_port     : TOK_PORT TOK_NUMERIC_VAL {
-    makeClientPort($2);
-}               | TOK_OLD_PORT TOK_NUMERIC_VAL {
-    _warnmsg("'client listener' not needed");
     makeClientPort($2);
 }
 ;
